[project]
name = "lightningrobot-cli"
version = "0.1.8"
description = "闪电机器人官方脚手架。"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE.txt"}
keywords = ["cli", "lightningrobot", "bot"]
authors = [
  {name = "ZhiHan", email = "zhihan@outlook.com" }
  {name = "NoNameGMM", email = "nonamegmm@qq.com" }
]
classifiers = [
  "License :: MIT License",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "requests"
]

[project.urls]
"Homepage" = "https://lightningrobot.github.io/"
"Bug Reports" = "https://github.com/LightningRobot/cli/issues"
"Source" = "https://github.com/LightningRobot/cli"

[project.scripts]
lrcli = "lightningrobot_cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"