[tool.poetry]
name = "lightningrobot-cli"
version = "0.1.8"
description = "闪电机器人官方脚手架。"
authors = [
    "ZhiHan <zhihan2727@hotmail.com>",
    "NoNameGMM <nonamegmm@qq.com>"
    ]
license = "MIT"
readme = "README.md"
homepage = "https://lightningrobot.github.io"
repository = "https://github.com/LightningRobot/cli/"
documentation = "https://lightningrobot.github.io"
keywords = ["cli", "lightningrobot", "bot"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
lrcli = "lightningrobot_cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
